Fix clear taxonomy, chg button to collapse/expand

--- a/statusboard/src/components/Projects/MultiSelect/MultiSelect.scss
+++ b/statusboard/src/components/Projects/MultiSelect/MultiSelect.scss
@@ -26,6 +26,7 @@
   .dropdown-arrow {
     height: 0.75em;
     width: 1em;
+    opacity: 1;
     transform: rotate(90deg);
   }
 
